@@ -1,5 +1,6 @@
 gforge (4.8.1-3+) UNRELEASED; urgency=low
 
+  [ Olivier Berger ]
   * Fix copyright file to mention nusoap.
   * Fix location of Vcs-Bzr: sources repository.
   * Fix problem in use-snoopy-from-distro.dpatch containing .rej changes.
@@ -9,7 +10,10 @@ gforge (4.8.1-3+) UNRELEASED; urgency=low
   * Change default system name to FusionForge instead of GForge.
   * Fix changelog entry for previous version adding details of CVE entry.
 
- -- Olivier Berger <olivier.berger@it-sudparis.eu>  Fri, 20 Nov 2009 15:09:51 +0100
+  [ Roland Mas ]
+  * Fix for symlink attack (CVE-2009-3304).
+
+ -- Roland Mas <lolando@debian.org>  Mon, 23 Nov 2009 13:53:17 +0100
 
 gforge (4.8.1-3) unstable; urgency=low
 
